src/test/deca/context/invalid/created/assign/assign_boolean_float.deca
// Description :
//    test  assign entre un boolean et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: (3.28) Les types boolean et float sont incompatibles pour l’affectation


{
boolean a = true;
float b;
b = a;
}
